# fastapi-multitenant-example-app

./: .gitignore  Dockerfile  Readme.md  alembic.ini  prepush.sh  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  db.py  generate_models.py  main.py
app/api/: auth.py  users.py
app/crud/: crud_auth.py
app/generated_models/: models.py
app/models/: models.py  shared_models.py
app/schemas/: requests.py  responses.py  schemas.py
app/service/: api_rejestr_io.py  auth.py  password.py  tenants.py
commands/: first_migration.py
migrations/: env.py  script.py.mako  tenant.py
migrations/versions/: 07193dcd6b96_add_users_roles_permissions.py  2022_07_14_1934-f3ffe4615512_init_shared_data.py  2022_07_14_2008-080e24511d27_add_books_table.py  2022_07_14_2010-581ac86ffe9e_add_users_tables.py  2022_07_15_1546-04e33b919cf7_initial.py  2022_07_18_1509-d6ba8c13303e_initial_shared.py  2022_07_18_1618-43de4e824162_initial_tenant_tables.py  2022_07_20_1419-e3aad4a7daff_add_tables_users_roles_permissions.py  2022_07_20_1458-9efdd94249a5_add_permissions_entries.py  ec23ff43c7b6_initial.py
tests/: conftest.py  test_auth.py  test_books.py
